comment out zendesk and gauges for now

--- a/src/flavors/mansfield/templates/includes.html
+++ b/src/flavors/mansfield/templates/includes.html
@@ -1,4 +1,4 @@
-<!-- Analytics by GitHub Gauges -->
+<!-- Analytics by GitHub Gauges
 <script type="text/javascript">
   var _gauges = _gauges || [];
   (function() {
@@ -11,9 +11,9 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
-</script>
+</script>-->
 
-<!-- Zendesk Feedback -->
+<!-- Zendesk Feedback 
 <script type="text/javascript" src="//assets.zendesk.com/external/zenbox/v2.5/zenbox.js"></script>
 <style type="text/css" media="screen, projection">
   @import url(//assets.zendesk.com/external/zenbox/v2.5/zenbox.css);
@@ -28,4 +28,4 @@
       tabPosition: 'Left'
     });
   }
-</script>
+</script> -->
