--- a/src/sa_web/templates/index.html
+++ b/src/sa_web/templates/index.html
@@ -113,11 +113,28 @@
       <article></article>
     </div><!-- end #content -->
   </div><!-- end #main -->
-
+ 
   <div id="ticker">
+   <div id="legend">
+			<div id="legendarea">
+	  
+				<div style="padding-top:8px;text-align:left;color:#f2f2f2"><h2>
+					Map Legend</h2></div>
+			<span class="legendITM"><img class="legendIMG" src="/static/css/images/feature-point-red.png">&nbsp;&nbsp;&nbsp;Place to Preserve</span><br><br>
+			<span class="legendITM"><img class="legendIMG" src="/static/css/images/feature-point-green.png">&nbsp;&nbsp;&nbsp;Place to Change</span><br><br>
+			<span class="legendITM"><img class="legendIMG" src="/static/css/images/feature-point-yellow.png">&nbsp;&nbsp;&nbsp;General Comment</span><br>
+
+			</div>
+		</div>
     <ul class="recent-points"></ul>
-  </div>
-  <p id="powered-by">{% blocktrans %}Powered by{% endblocktrans %} <a href="http://shareabouts.org/" class="shareabouts-logo">Shareabouts</a>, <span class="nowrap">a project of <a href="http://openplans.org/" class="openplans-logo">OpenPlans</a>.</span></p>
+  
+  	
+		</div>
+  <p id="powered-by">{% blocktrans %}Powered by{% endblocktrans %} <a href="http://shareabouts.org/" class="shareabouts-logo">Shareabouts</a>, <span class="nowrap">a project of <a href="http://openplans.org/" class="openplans-logo">OpenPlans</a>.</span>
+  	
+  
+  	
+  </p>
 
   <footer id="colophon">
   </footer>
