update pda & legend

--- a/src/sa_web/templates/index.html
+++ b/src/sa_web/templates/index.html
@@ -123,6 +123,8 @@
 			<span class="legendITM"><img class="legendIMG" src="/static/css/images/feature-point-green.png">&nbsp;&nbsp;&nbsp;Place to Preserve</span><br><br>
 			<span class="legendITM"><img class="legendIMG" src="/static/css/images/feature-point-red.png">&nbsp;&nbsp;&nbsp;Place to Change</span><br><br>
 			<span class="legendITM"><img class="legendIMG" src="/static/css/images/feature-point-yellow.png">&nbsp;&nbsp;&nbsp;General Comment</span><br>
+			<br>
+			<span class="legendITM"><img class="legendIMG" src="/static/css/images/pdalegend.png" style="opacity: .6">&nbsp;&nbsp;Planned Development Areas</span><br>
 
 			</div>
 		</div>
