--- a/src/flavors/mansfield/static/css/custom.css
+++ b/src/flavors/mansfield/static/css/custom.css
@@ -30,7 +30,7 @@ a:hover {
 -------------------------------------------------------------- */
 
 #site-header {
-  background:url('MansfieldTomorrow.png') no-repeat;
+  background:url('') no-repeat;
   background-color: #FFF;
 }
 
