updates to east line forum map

--- a/src/flavors/eastcorridor/static/css/custom.css
+++ b/src/flavors/eastcorridor/static/css/custom.css
@@ -45,7 +45,7 @@ a:hover {
 -------------------------------------------------------------- */
 
 #site-header {
-  background:url('PMWalkshopHeader.png') no-repeat;
+  background:url('PMHeader.png') no-repeat;
   background-color: #FFF;
 }
 
