config about.html, config.yml, and feature place images for gold line

--- a/src/flavors/eastcorridor/static/css/custom.css
+++ b/src/flavors/eastcorridor/static/css/custom.css
@@ -46,6 +46,7 @@ a:hover {
 
 #site-header {
   background:url('PMHeader.png') no-repeat;
+  background-size: 300px;
   background-color: #FFF;
 }
 
