--- a/src/flavors/walkdenver/templates/index.html
+++ b/src/flavors/walkdenver/templates/index.html
@@ -7,7 +7,15 @@
 <!--
   This will place content at the top of the side bar
  -->
+ 
+ 
 {% block sidebar %}
+<h4 class="legend">Legend</h4>
+
+<p class="legend-text"><img src="/static/css/images/feature-point-brick.png"><span class="legend-text"> Pedestrian Count</span></p>
+<p class="legend-text"><img src="/static/css/images/feature-point-pumpkin.png"> Intersection Quality</p>
+<p class="legend-text"><img src="/static/css/images/feature-point-navy.png"> Sidewalk Quality</p>
+<p class="legendbox"> </p>
 {% endblock %}
 
 <!--
