--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -274,7 +274,7 @@ img {
 }
 #site-title {
   color: #eee;
-  font-size: 1em;
+  font-size: .8em;
   font-family: 'Monda', sans-serif;
   font-weight: 500;
   text-shadow: 1px -1px 1px rgba(0,0,0,0.5);
@@ -1071,13 +1071,14 @@ a.close-unsupported-overlay {
   	margin: 0 0 0 0.5em;
   }
   #sign-in-btn {
-    font-size: 1em;
+    display: none;
+    /*font-size: 1em;
     text-decoration: none;
     line-height: 1.5;
     padding: 0.5em;
     margin: 0.75em 0.75em 0 0.75em;
     position: relative;
-    z-index: 3;
+    z-index: 3;*/
   }
   .sign-in-menu {
     background: #666;
