updated logo, added donate button

--- a/src/flavors/walkdenver/templates/index.html
+++ b/src/flavors/walkdenver/templates/index.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block site-title %}
-<a href="/">{{ config.app.name }}</a>
+<a href="/">
+	<img id="site-logo" src="/static/css/images/walkscopelogo_sm.png">
+	<!-- {{ config.app.name }} -->
+	</a>
 {% endblock %}
 
 <!--
