--- a/src/flavors/walkdenver/static/css/custom.css
+++ b/src/flavors/walkdenver/static/css/custom.css
@@ -70,16 +70,16 @@ h5.tips {
 	margin-top: 2em
 }
 p.tips {
-	/*font-size: 80%;*/
+	font-size: 100%;
 	font-weight: 500;
 	margin-top: 1em;
 	margin-bottom: 0em;
 }
-
+/*
 span.tips {
-	/*font-size: 80%;*/
+	font-size: 80%;
 	font-weight: 200;
-}
+}*/
 
 img.logos {
 	max-height:75px;
